<resources>
    <string name="app_name">Green_Garden_G3</string>
    <string name="Titulo">Bienvenido</string>
    <string name="Titulo_registrarse">Registrarse</string>
    <string name="titulo_menu">Menú</string>
    <string name="img_consumo">Consumo</string>
    <string name="img1_estadistica">Estadistica</string>
    <string name="img2_consejo">Consejos</string>
    <string name="logo">Logotipo</string>
    <string name="img_consejos_descripcion">Consejos</string>
    <string name="btn_agua">Agua</string>
    <string name="btn_abono">Abono</string>
    <string name="btn_energia">Energía</string>
    <string name="btn_inicio">Iniciar sesión</string>
    <string name="btn_cerrar">Cerrar sesión</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_regresar">Regresar</string>
    <string name="btn_registrarse">Crear cuenta</string>
    <string name="ETusuario">Introduce tu usuario</string>
    <string name="ETcontrasena">Introduce tu contraseña</string>
    <string name="ETcontrasena2">Confirma tu contraseña</string>
    <string name="TVinicio">¿Ya tienes cuenta?</string>
    <string name="TViniciar">Iniciar sesión</string>
    <string name="TVcuenta">¿No tienes cuenta?</string>
    <string name="TVregistrate">Crear cuenta</string>
    <string name="TVrecuperar">Recuperar Contraseña</string>
    <string name="TV_estadistica">Estadística</string>
    <string name="TV_consumo">Consumo</string>
    <string name="TV_consejos">Consejos</string>
    <string name="title_activity_recuperar">Recuperar</string>
    <string name="ETnombre">Introduce tu nombre</string>
    <string name="ETapellidos">Introduce tus apellidos</string>
    <string name="ETfecha">Introduce la fecha</string>
    <string name="ETcorreo">Introduce tu correo</string>
    <string name="ETtelefono">Introduce tu telefono</string>
    <string name="ETcontraseña">Introduce tu contraseña</string>
    <string name="ET_planta">Elige una planta</string>
    <string name="ET_categoria">Elige una categoria</string>
    <string name="ET_cantidad">Cantidad de consumo</string>
    <string name="fecha">Fecha</string>
    <string name="planta">Planta</string>
    <string name="categoria">Categoría</string>
    <string name="consumo">Consumo</string>
    <string name="costo">costo total</string>
    <string name="descripcion_consumo">Registra datos para conocer tu consumo</string>
    <string name="descripcion_estadistica">Conoce las estadisticas sobre tu consumo</string>
    <string name="descripcion_consejos">Tips que puedes aplicar para bajar el consumo</string>
    <string name="descripcion_cerrar">Oprime si deseas cerrar sesión</string>
    <string name="conoce_m_s">Conoce más</string>
    <string name="energia">La eficiencia energética consiste en utilizar la energía de mejor manera, mira más consejos.</string>
    <string name="abono">El abono nos provee de los nutrientes que le hacen falta a la tierra o sustratos, mira más consejos.</string>
    <string name="agua">El agua es sinónimo de vida e indispensable en el día a día, sigue los consejos para cuidar mas de este recurso</string>
    <string name="estad_año">Año</string>
    <string name="stadisti_a_n">año</string>
    <string name="mes">mes</string>
    <string name="consejos_de_agua">Consejos de agua</string>
    <string name="detalle_agua">Toma duchas más breves y cierra las llaves mientras te enjabonas o aplicas champú</string>
    <string name="detalle_agua2">No permitas goteo al cerrar las llaves, remplaza los empaques cada vez que sea necesario.</string>
    <string name="detalle_agua3">Cierra la llave del agua mientras te cepillas los dientes; de esta manera, una familia de cinco personas puede ahorrar hasta 40 litros de agua al día.</string>
    <string name="detalle_agua4">Usa la lavadora de ropa sólo con cargas completas, a menos que tenga ajustes para usar menos agua.</string>
    <string name="consejos_energia">Consejos de energía</string>
    <string name="detalle_energia">Usa focos ahorradores, iluminan igual que los incandescentes y consumen 75% menos energía</string>
    <string name="detalle_energia2">Coloca el refrigerador en sitios ventilados y lejos de fuentes de calor como la estufa porque consumirá más energía</string>
    <string name="detalle_energia3">Apaga focos y desconecta aparatos. Algunos de ellos, aún apagados, consumen energía. Si nadie ve la televisión o escucha la radio, ¡apágalos!</string>
    <string name="detalle_energia4">Revisa que tu instalación eléctrica no tenga fugas: compruébalo apagando las luces y desconectando todos los aparatos, luego verifica que el medidor no gire. Si lo hace debes revisar la instalación</string>
    <string name="consejos_de_abono">Consejos de abono</string>
    <string name="detalle_abono">Es mejor abonar en pequeñas dosis y múltiples ocasiones</string>
    <string name="detalle_abono2">Los fertilizantes se deben aplicar solo cuando la planta los necesita y cuando las plantas estén lista para absorber los nutrientes con sus raíces.</string>
    <string name="detalle_abono3">Planifica el tiempo de la fertilización para que coincida con el tiempo en que las raíces estén más activas y el suelo este húmedo</string>
    <string name="detalle_abono4">Evite fertilizar los árboles y arbusto cuando estos sufren de stress hídrico durante los meses de verano y evite aplicar fertilizante si no tiene una fuente de agua disponible para regar después de fertilizar</string>
    <string name="total_pagado">Total pagado:</string>
    <string name="TCOP0">$ 0</string>
    <string name="ingrese_la_planta">Ingrese la planta</string>
    <string name="ingrese_la_categor_a">Ingrese la categoría</string>
</resources>