<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Estadisticas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/fondo_superior"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables,UselessParent">

        <TextView
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/TV_estadistica"
            android:textColor="@color/white"
            android:textSize="36sp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/estadist"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img1_estadistica"
            android:src="@drawable/estadistica"
            tools:ignore="VisualLintBounds" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableConsumtion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="70dp"
                android:background="#D1C4C4"
                android:textAlignment="inherit">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="375dp"
                    android:background="#5DA83D"
                    tools:ignore="UselessParent"
                    android:gravity="center_horizontal"
                    android:padding="7dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:gravity="center_horizontal"
                        android:text="@string/stadisti_a_n"
                        android:textColor="#3E2723" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/mes"
                        android:textColor="#3E2723" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/categoria"
                        android:textColor="#3E2723" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/consumo"
                        android:textColor="#3E2723" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/costo"
                        android:textColor="#3E2723" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="20dp"
                android:background="@drawable/fondo_superior"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_pagado"
                    android:textColor="#FFFEFE"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/textViewTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TCOP0"
                    android:textColor="#3F630D"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <Button
                android:id="@+id/regresar"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:backgroundTint="#E8AA0B"
                android:text="@string/btn_regresar"
                android:textColor="#3F630D"
                android:textSize="24sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>