<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Consumo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@drawable/fondo_superior"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/TV_consumo"
            android:textColor="@color/white"
            android:textSize="34sp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/img_consumo"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:contentDescription="@string/img_consumo"
            android:src="@drawable/categoria" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPlant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="#3F630D"
        app:errorTextAppearance="@style/error_appearance"
        app:startIconDrawable="@drawable/planta">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_plant"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="Ingrese la planta" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="#3F630D"
        app:errorTextAppearance="@style/error_appearance"
        app:startIconDrawable="@drawable/lista">

        <AutoCompleteTextView
            android:id="@+id/autocomplete_category"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="Ingrese la categoría" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="#3F630D"
        app:errorTextAppearance="@style/error_appearance"
        app:startIconDrawable="@drawable/cantidad">

        <EditText
            android:id="@+id/ET_cantidad"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:hint="@string/ET_cantidad"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="@color/white"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:boxStrokeColor="#3F630D"
        app:errorTextAppearance="@style/error_appearance"
        app:startIconDrawable="@drawable/calendar">

        <EditText
            android:id="@+id/ET_fecha"
            android:layout_width="360dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/ETfecha"
            android:importantForAutofill="no"
            android:inputType="date"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E8AA0B"
        android:text="@string/btn_guardar"
        android:textColor="#3F630D"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E8AA0B"
        android:text="@string/btn_regresar"
        android:textColor="#3F630D"
        android:textSize="22sp" />

</LinearLayout>